(executable
 (name render_triangle)
 (libraries wgpu core core_unix test_util)
 (preprocess
  (pps ppx_jane)))

(rule
 (alias runtest)
 (action
  (run ./render_triangle.exe))
 (targets render_triangle.png))

(rule
 (alias runtest)
 (action
  (cmp render_triangle.expected.png render_triangle.png)))
 
